--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
       <!-- <a-marker type="pattern" url="data/markers/pattern-arjs.patt"><a-box></a-box></a-marker> -->
       <!-- <a-marker type="pattern" url="data/markers/test.patt" markercontroller="name : hiro"></a-marker> -->
 
-      --MARKERS--
+			<a-marker type="pattern" url="data/markers\Hiro.patt" markercontroller="name : Hiro"></a-marker>
+			<a-marker type="pattern" url="data/markers\newabc.patt" markercontroller="name : newabc"></a-marker>
+			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
+			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-831.patt" markercontroller="name : pattern-831"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-abc.patt" markercontroller="name : pattern-abc"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-beach2.patt" markercontroller="name : pattern-beach2"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-colorful-big.patt" markercontroller="name : pattern-colorful-big"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-colorful.patt" markercontroller="name : pattern-colorful"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-marker.patt" markercontroller="name : pattern-marker"></a-marker>
+
       <a-entity camera cameratransform></a-entity>
     </a-scene>
   </body>
